--- a/app/src/main/res/layout/layout_song_controls.xml
+++ b/app/src/main/res/layout/layout_song_controls.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/player_controls_layout"
@@ -8,53 +9,91 @@
         android:background="@android:color/transparent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/exo_play"
-            style="@style/ExoMediaButton.Rewind"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@id/exo_position"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/exo_icon_play"
-            android:padding="@dimen/player_icon_padding"
-            android:tint="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:includeFontPadding="false"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textColor="@color/white"
+            android:paddingTop="@dimen/player_icon_padding"
+            android:paddingBottom="@dimen/player_icon_padding"
+            tools:text="12:00"
+            android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <ImageView
-            android:id="@+id/exo_pause"
-            style="@style/ExoMediaButton.Rewind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/exo_icon_pause"
-            android:padding="@dimen/player_icon_padding"
-            android:tint="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintEnd_toStartOf="@+id/exo_prev" />
 
         <ImageView
             android:id="@+id/exo_prev"
-            style="@style/ExoMediaButton.Play"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:padding="@dimen/player_icon_padding"
+            style="@style/ExoMediaButton.Previous"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/player_icon_padding"
+            android:paddingBottom="@dimen/player_icon_padding"
             android:src="@drawable/exo_icon_previous"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/exo_play"
+            app:layout_constraintStart_toEndOf="@+id/exo_position"
+            app:layout_constraintEnd_toStartOf="@+id/play_pause_rl"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <RelativeLayout
+            android:id="@+id/play_pause_rl"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingTop="@dimen/player_icon_padding"
+            android:paddingBottom="@dimen/player_icon_padding"
+            app:layout_constraintStart_toEndOf="@+id/exo_prev"
+            app:layout_constraintEnd_toStartOf="@+id/exo_next"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/exo_play"
+                style="@style/ExoMediaButton.Play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/exo_icon_play"
+                android:tint="@color/white" />
+
+            <ImageView
+                android:id="@+id/exo_pause"
+                style="@style/ExoMediaButton.Pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/exo_icon_pause"
+                android:tint="@color/white" />
+
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/exo_next"
-            style="@style/ExoMediaButton.Pause"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            style="@style/ExoMediaButton.Next"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:padding="@dimen/player_icon_padding"
             android:src="@drawable/exo_icon_next"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/exo_play"
+            android:paddingTop="@dimen/player_icon_padding"
+            android:paddingBottom="@dimen/player_icon_padding"
+            app:layout_constraintEnd_toStartOf="@+id/exo_duration"
+            app:layout_constraintStart_toEndOf="@+id/play_pause_rl"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@id/exo_duration"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textColor="@color/white"
+            tools:text="24:00"
+            android:gravity="center"
+            android:paddingTop="@dimen/player_icon_padding"
+            android:paddingBottom="@dimen/player_icon_padding"
+            app:layout_constraintStart_toEndOf="@+id/exo_next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
