--- a/app/src/main/res/layout/login_layout_activity.xml
+++ b/app/src/main/res/layout/login_layout_activity.xml
@@ -66,9 +66,26 @@
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/login_options_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="google_sign_btn,skip_text"
+            />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/white"
+            android:layout_marginBottom="20dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            >
-        </TextView>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
