--- a/app/src/main/res/layout/layout_home_fragment.xml
+++ b/app/src/main/res/layout/layout_home_fragment.xml
@@ -10,7 +10,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:clickable="true">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/home_frag_toolbar"
