--- a/app/src/main/res/layout/layout_home_item.xml
+++ b/app/src/main/res/layout/layout_home_item.xml
@@ -14,8 +14,8 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        app:cardCornerRadius="10dp">
+        android:layout_height="150dp"
+        app:cardCornerRadius="140dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -37,6 +37,7 @@
             </FrameLayout>
 
             <ImageView
+                android:id="@+id/play_icon"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:src="@drawable/ic_play"
@@ -56,7 +57,8 @@
                 android:fontFamily="serif-monospace"
                 android:textStyle="bold"
                 android:textSize="14sp"
-                app:layout_constraintStart_toEndOf="@+id/vertical_guide"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/horizontal_guide"/>
 
             <TextView
@@ -68,7 +70,8 @@
                 android:textStyle="italic"
                 android:fontFamily="serif-monospace"
                 android:textSize="12sp"
-                app:layout_constraintStart_toEndOf="@+id/vertical_guide"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/horizontal_bottom_guide"
                 />
 
