--- a/app/src/main/res/layout/audio_bottom_sheet_controller_view.xml
+++ b/app/src/main/res/layout/audio_bottom_sheet_controller_view.xml
@@ -5,6 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
         android:background="@drawable/bg_home_background">
 
         <androidx.constraintlayout.widget.ConstraintLayout
