--- a/app/src/main/res/layout/layout_song_item.xml
+++ b/app/src/main/res/layout/layout_song_item.xml
@@ -70,11 +70,12 @@
 
             <ImageView
                 android:id="@+id/song_duration_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:padding="4dp"
                 android:layout_marginEnd="12dp"
-                app:srcCompat="@drawable/ic_three_dot"
+                android:tint="@color/white"
+                android:src="@drawable/ic_menu_about"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
