--- a/app/src/main/res/layout/audio_bottom_sheet_controller_view.xml
+++ b/app/src/main/res/layout/audio_bottom_sheet_controller_view.xml
@@ -128,6 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_three_dot"
+                android:visibility="invisible"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
