--- a/app/src/main/res/layout/layout_song_item.xml
+++ b/app/src/main/res/layout/layout_song_item.xml
@@ -76,6 +76,7 @@
                 android:layout_marginEnd="12dp"
                 android:tint="@color/white"
                 android:src="@drawable/ic_menu_about"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
