--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,11 +52,8 @@
 
     <style name="dialog_text_appearance" parent="AppTextAppearance">
         <item name="android:textSize"> 12sp </item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:layout_marginTop">16dp</item>
-        <item name="singleLine">true</item>
-        <item name="android:ellipsize">marquee</item>
-        <item name="android:gravity">center</item>
     </style>
 
     <style name="DialogAnimation">
