--- a/app/src/main/res/layout/layout_dialog_detail.xml
+++ b/app/src/main/res/layout/layout_dialog_detail.xml
@@ -1,61 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="8dp"
-        app:cardCornerRadius="8dp">
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@drawable/bg_home_background">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/back_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_marginTop="4dp"
+            app:srcCompat="@drawable/ic_arrow_back_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/about_us_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/home_item_about_us"
+            style="@style/toolbar_title_text_appearance"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/back_iv" />
+
+        <TextView
+            android:id="@+id/about_us_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="20dp"
-            android:background="@color/white">
-            
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/dialog_iv"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/bg_default_playing_song"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/about_us_text"
+            style="@style/dialog_text_appearance"
+            app:layout_constraintTop_toBottomOf="@+id/back_iv"
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:id="@+id/song_title_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:singleLine="true"
-                style="@style/dialog_text_appearance"
-                app:layout_constraintTop_toBottomOf="@+id/dialog_iv" />
+        <TextView
+            android:id="@+id/contact_with_us_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textSize="14sp"
+            android:layout_marginStart="8dp"
+            android:text="@string/about_us_contact_text"
+            android:textColor="@color/song_item_artist_text_color"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/about_us_text"
+            />
 
-            <TextView
-                android:id="@+id/song_artist_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:singleLine="true"
-                style="@style/dialog_text_appearance"
-                app:layout_constraintTop_toBottomOf="@+id/song_title_tv"
-                />
+        <TextView
+            android:id="@+id/developer_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textSize="12sp"
+            android:layout_marginStart="8dp"
+            android:text="@string/about_us_developer_name"
+            style="@style/dialog_text_appearance"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/contact_with_us_tv"
+            />
 
-            <TextView
-                android:id="@+id/song_album_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:singleLine="true"
-                app:layout_constraintTop_toBottomOf="@+id/song_artist_tv"
-                style="@style/dialog_text_appearance" />
+        <TextView
+            android:id="@+id/developer_linkedIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textSize="12sp"
+            android:layout_marginStart="8dp"
+            android:textIsSelectable="true"
+            android:text="@string/about_us_contact_linkedIn"
+            style="@style/dialog_text_appearance"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/developer_name" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/developer_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:layout_marginStart="8dp"
+            android:text="@string/about_us_contact_email"
+            style="@style/dialog_text_appearance"
+            android:textSize="12sp"
+            android:textIsSelectable="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/developer_linkedIn"
+            />
 
-    </androidx.cardview.widget.CardView>
+        <RelativeLayout
+            android:id="@+id/bottom_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <include layout="@layout/nav_bottom_layout"/>
+
+        </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </layout>
