--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,9 +51,9 @@
     </style>
 
     <style name="dialog_text_appearance" parent="AppTextAppearance">
-        <item name="android:textSize"> 12sp </item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:textSize"> 14sp </item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:lineSpacingExtra">8sp</item>
     </style>
 
     <style name="DialogAnimation">
